Bert_custom_data

--- a/bert_corrector/custom_data_for_bert.ipynb
+++ b/bert_corrector/custom_data_for_bert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "d91894e2-77ae-42fa-a293-fcce486570b5",
    "metadata": {},
    "outputs": [
@@ -27,6 +27,9 @@
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
     "from random import random, choice\n",
+    "import random\n",
+    "import time\n",
+    "\n",
     "from tqdm import tqdm  \n",
     "from pandarallel import pandarallel\n",
     "\n",
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "5aa90c94-2e70-48f0-8de5-760ae8aed0c9",
    "metadata": {},
    "outputs": [],
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "33b25d82-6886-4b46-97ac-30a26f1072f1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "3aa0aa5b-5056-46df-bace-547180342999",
    "metadata": {},
    "outputs": [],
@@ -93,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "a2399432-be75-45d6-9c5a-c35128bede45",
    "metadata": {},
    "outputs": [],
@@ -103,28 +106,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "278fa2f8-eea1-43b3-8a5a-7d4a07651d1f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6      28611\n",
-       "5      27855\n",
-       "7      27242\n",
-       "4      25512\n",
-       "8      24984\n",
+       "6      28800\n",
+       "5      27971\n",
+       "7      27395\n",
+       "4      25624\n",
+       "8      24386\n",
        "       ...  \n",
-       "130        1\n",
-       "64         1\n",
-       "68         1\n",
-       "69         1\n",
-       "65         1\n",
-       "Name: lena, Length: 72, dtype: int64"
+       "123        1\n",
+       "63         1\n",
+       "80         1\n",
+       "58         1\n",
+       "75         1\n",
+       "Name: lena, Length: 73, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "2576fbfa-a23b-4434-a16f-adfda7228c0c",
    "metadata": {},
    "outputs": [],
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "9baee4b4-8dd2-4b97-a4ba-49473bbfe7f7",
    "metadata": {},
    "outputs": [],
@@ -155,30 +158,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "cdca9b0d-24eb-4a8c-b59b-899b76bf6942",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6     11627\n",
-       "5     11407\n",
-       "7     10876\n",
-       "4     10484\n",
-       "8     10066\n",
-       "9      8765\n",
-       "3      8560\n",
-       "10     7436\n",
-       "11     6188\n",
-       "12     4927\n",
-       "13     4142\n",
-       "14     3094\n",
-       "15     2428\n",
+       "6     11713\n",
+       "5     11287\n",
+       "7     11226\n",
+       "4     10187\n",
+       "8      9930\n",
+       "9      8800\n",
+       "3      8547\n",
+       "10     7366\n",
+       "11     6179\n",
+       "12     5006\n",
+       "13     4106\n",
+       "14     3129\n",
+       "15     2524\n",
        "Name: lena, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "d10024b7-1f3d-4cd6-9437-ad53e525bd12",
    "metadata": {},
    "outputs": [],
@@ -199,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "b73717df-9564-4a0e-99fd-d618bc897754",
    "metadata": {},
    "outputs": [],
@@ -209,17 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f48d09a-c018-42d8-a604-83465c567edc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def error_chooser()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "a7b7a147-bfc7-413c-9c8b-8bd00842b317",
    "metadata": {},
    "outputs": [
@@ -251,28 +244,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>চাঁপাইনবাবগঞ্জে মহানন্দা ও পুনর্ভবা নদীর দখল হ...</td>\n",
-       "      <td>10</td>\n",
+       "      <td>দিনটি জমকালোভাবে আমার স্বামী আয়োজন করে</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>তাঁর বলে উইকেটের পেছনে টম বান্ডেলকে ক্যাচ দেন</td>\n",
+       "      <td>আরও অর্থ থাকায় বছরের জন্য সঞ্চয়পত্র ক্রয় করেন</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>তাঁর বইয়ের সংগ্রহ ঈর্ষণীয়</td>\n",
-       "      <td>4</td>\n",
+       "      <td>একটি বাংলাদেশ তুমি জাগ্রত জনতার</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>রোগী অজ্ঞান হলে বা স্ট্রোকের সঙ্গে অন্যান্য রো...</td>\n",
-       "      <td>11</td>\n",
+       "      <td>সমালোচনার তিরবিদ্ধ টেস্ট অধিনায়ক মুমিনুল হকেরও...</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>মোটাদাগে প্রবাসী ও চাকরিজীবীরা বৈদেশিক মুদ্রা ...</td>\n",
-       "      <td>8</td>\n",
+       "      <td>বিভিন্ন এনজিও চর এলাকায় কাজ করছে</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -281,28 +274,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99995</th>\n",
-       "      <td>এখানে প্রার্থী তিনজন</td>\n",
-       "      <td>3</td>\n",
+       "      <td>তিনি মার কথার দিকে বিশেষ নজর না নিয়ে বেরিয়ে গেলেন</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99996</th>\n",
-       "      <td>পানি ও রুম হিটার ব্যবহার করছে</td>\n",
-       "      <td>6</td>\n",
+       "      <td>গতকাল দুপুরে নামাজের পর সৈয়দুর নিজ ঘরে ঘুমিয়ে ...</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99997</th>\n",
-       "      <td>নারীপুরুষ সবার জন্যই আছে</td>\n",
-       "      <td>4</td>\n",
+       "      <td>বেলায়েতরা তিন ভাই</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99998</th>\n",
-       "      <td>নিজেই নিজেকে বলে রহিমা বিবি</td>\n",
-       "      <td>5</td>\n",
+       "      <td>আজ বুধবার গণমাধ্যমে পাঠানো বিবৃতিতে বলা হয়</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99999</th>\n",
-       "      <td>আবুল মাল আবদুল মুহিত বলেন</td>\n",
-       "      <td>5</td>\n",
+       "      <td>এ পরীক্ষানিরীক্ষা নানা রকম জীবে পরিচালনা করা ব...</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -311,22 +304,22 @@
       ],
       "text/plain": [
        "                                                sentence  lena\n",
-       "0      চাঁপাইনবাবগঞ্জে মহানন্দা ও পুনর্ভবা নদীর দখল হ...    10\n",
-       "1          তাঁর বলে উইকেটের পেছনে টম বান্ডেলকে ক্যাচ দেন     8\n",
-       "2                              তাঁর বইয়ের সংগ্রহ ঈর্ষণীয়     4\n",
-       "3      রোগী অজ্ঞান হলে বা স্ট্রোকের সঙ্গে অন্যান্য রো...    11\n",
-       "4      মোটাদাগে প্রবাসী ও চাকরিজীবীরা বৈদেশিক মুদ্রা ...     8\n",
+       "0                 দিনটি জমকালোভাবে আমার স্বামী আয়োজন করে     6\n",
+       "1          আরও অর্থ থাকায় বছরের জন্য সঞ্চয়পত্র ক্রয় করেন     8\n",
+       "2                        একটি বাংলাদেশ তুমি জাগ্রত জনতার     5\n",
+       "3      সমালোচনার তিরবিদ্ধ টেস্ট অধিনায়ক মুমিনুল হকেরও...     9\n",
+       "4                       বিভিন্ন এনজিও চর এলাকায় কাজ করছে     6\n",
        "...                                                  ...   ...\n",
-       "99995                               এখানে প্রার্থী তিনজন     3\n",
-       "99996                      পানি ও রুম হিটার ব্যবহার করছে     6\n",
-       "99997                           নারীপুরুষ সবার জন্যই আছে     4\n",
-       "99998                        নিজেই নিজেকে বলে রহিমা বিবি     5\n",
-       "99999                          আবুল মাল আবদুল মুহিত বলেন     5\n",
+       "99995  তিনি মার কথার দিকে বিশেষ নজর না নিয়ে বেরিয়ে গেলেন    10\n",
+       "99996  গতকাল দুপুরে নামাজের পর সৈয়দুর নিজ ঘরে ঘুমিয়ে ...     9\n",
+       "99997                                  বেলায়েতরা তিন ভাই     3\n",
+       "99998         আজ বুধবার গণমাধ্যমে পাঠানো বিবৃতিতে বলা হয়     7\n",
+       "99999  এ পরীক্ষানিরীক্ষা নানা রকম জীবে পরিচালনা করা ব...     9\n",
        "\n",
        "[100000 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "c2efbc07-2871-4e97-9436-c0593ab70b94",
    "metadata": {},
    "outputs": [],
@@ -349,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "13dc94d2-0746-43a4-8a90-2b68e1ec9259",
    "metadata": {},
    "outputs": [],
@@ -359,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "e37ad755-8cb9-4950-820c-f7158f7091db",
    "metadata": {},
    "outputs": [],
@@ -424,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "5a6f056c-8b73-4220-a047-8327d53fea1c",
    "metadata": {},
    "outputs": [],
@@ -496,28 +489,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6116786-a4a5-46f3-bfbe-1bb1accc851e",
+   "execution_count": 37,
+   "id": "ad393483-253a-4549-87b3-5381de1617b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "error_methods = []"
+    "def apply_error(string,error):\n",
+    "    random.seed(time.time()+200)\n",
+    "    errors = ['Cluster','Replace','Juktakkhor','Character','Deletion','Noerror']\n",
+    "    if error == \"Cluster\":\n",
+    "        if string in list(SameClusterDict.keys()):\n",
+    "            string = random.choice(SameClusterDict[string])\n",
+    "    if error == \"Replace\":\n",
+    "        if string in list(ReplaceDict.keys()):\n",
+    "            string = random.choice(ReplaceDict[string])\n",
+    "    if error == \"Juktakkhor\":\n",
+    "        string = random.choice(JuktakkhorList)\n",
+    "    if error == \"Character\":\n",
+    "        string = random.choice(character)\n",
+    "    if error == \"Deletion\":\n",
+    "        string = \"\"\n",
+    "    if error == \"insertion\":\n",
+    "        temp_error = random.choice(errors)\n",
+    "        string = string + apply_error(string,temp_error)\n",
+    "    if error == \"Noerror\":\n",
+    "        pass\n",
+    "    return string"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f6b10b73-b096-443e-ba20-c9a0ed294705",
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "6f48d09a-c018-42d8-a604-83465c567edc",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "1. single spell error\n",
-    "2. phonetically similar error\n",
-    "3. jukto okkhor error\n",
-    "4. multiple error\n",
-    "5. random noise\n",
-    "6. percentage error\n",
-    "7. deletion\n",
-    "8. insertion"
+    "def error_generator(word):\n",
+    "    errors = ['Cluster','Replace','Juktakkhor','Character','Deletion','Insertion','Noerror']\n",
+    "    string = []\n",
+    "    string[:0] = word\n",
+    "    random.seed(time.time())\n",
+    "    noise_ratio = random.randint(0,int(len(word)*0.40))\n",
+    "    print(noise_ratio)\n",
+    "    for n in range(noise_ratio):\n",
+    "        for i in range(len(string)):\n",
+    "            random.seed(time.time()+2)\n",
+    "            error_t = random.random()\n",
+    "            if error_t >=0.5:\n",
+    "                random.seed(time.time()+100)\n",
+    "                error = random.choice(errors)\n",
+    "                string[i] = apply_error(string[i],error)\n",
+    "    word = \"\".join(string)\n",
+    "    word = word.replace(\" \", \"\")\n",
+    "    return word"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "36417d43-108e-41d2-b115-15c5d20408c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word = 'অজপারাগায়ে'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c6784cb7-b092-4d19-ae03-1d79716e7941",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'ত্রএফসরপ্টইওল্লট'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error_generator(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "502a025c-0387-4e2a-af5d-ce11d317d92f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = \n",
+    "df_prothom_alo.sentence.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "836914fb-98ed-4718-8caa-f0c4ebdd3c95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100000/100000 [24:06<00:00, 69.15it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_custom_error_dataset = pd.DataFrame()\n",
+    "for sen in tqdm(sentence):\n",
+    "    sent = sen\n",
+    "    sen = sen.split()\n",
+    "    sent = sent.split()\n",
+    "    random.seed(time.time()+356)\n",
+    "    random_index = random.randint(0,len(sen)-1)\n",
+    "    sen[random_index] = '[MASK]'\n",
+    "    error_word = error_generator(sent[random_index])\n",
+    "    temp_dict = {'sentence':\" \".join(sent),'masked_sen':\" \".join(sen),'error_word':error_word }\n",
+    "    df_custom_error_dataset = df_custom_error_dataset.append(temp_dict,ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "5cb4d800-fb88-49e9-9267-e4921683aecd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>masked_sen</th>\n",
+       "      <th>error_word</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>87101</th>\n",
+       "      <td>সেখানে বেলা তিনটায় তাঁকে মায়ের কবরে চিরনিদ্রায়...</td>\n",
+       "      <td>সেখানে বেলা তিনটায় তাঁকে মায়ের কবরে [MASK] শায়...</td>\n",
+       "      <td>চগযরোৎপদঙ্‌ক্তন্দ্বদ্ভ্র</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86466</th>\n",
+       "      <td>এরপর নিজেদের দৈনন্দিন হিসাবনিকাশ শেষ করে আটটার...</td>\n",
+       "      <td>এরপর নিজেদের দৈনন্দিন হিসাবনিকাশ শেষ করে আটটার...</td>\n",
+       "      <td>বন্ধ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77153</th>\n",
+       "      <td>স্থায়ী ঠিকানায় জায়গাজমি না থাকলে জটিলতাগুলো কে...</td>\n",
+       "      <td>স্থায়ী ঠিকানায় জায়গাজমি না [MASK] জটিলতাগুলো ক...</td>\n",
+       "      <td>তকথো</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74888</th>\n",
+       "      <td>আশ্রয়শিবিরের সবকিছু দেখভাল করে দুর্যোগ ব্যবস্থ...</td>\n",
+       "      <td>আশ্রয়শিবিরের সবকিছু দেখভাল করে দুর্যোগ ব্যবস্থ...</td>\n",
+       "      <td>পোনঘ্নদআব্রর্টঙঃও</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68280</th>\n",
+       "      <td>আমার যতটুকু মনে পড়ে</td>\n",
+       "      <td>আমার যতটুকু [MASK] পড়ে</td>\n",
+       "      <td>স্ট্রআে</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                sentence  \\\n",
+       "87101  সেখানে বেলা তিনটায় তাঁকে মায়ের কবরে চিরনিদ্রায়...   \n",
+       "86466  এরপর নিজেদের দৈনন্দিন হিসাবনিকাশ শেষ করে আটটার...   \n",
+       "77153  স্থায়ী ঠিকানায় জায়গাজমি না থাকলে জটিলতাগুলো কে...   \n",
+       "74888  আশ্রয়শিবিরের সবকিছু দেখভাল করে দুর্যোগ ব্যবস্থ...   \n",
+       "68280                                আমার যতটুকু মনে পড়ে   \n",
+       "\n",
+       "                                              masked_sen  \\\n",
+       "87101  সেখানে বেলা তিনটায় তাঁকে মায়ের কবরে [MASK] শায়...   \n",
+       "86466  এরপর নিজেদের দৈনন্দিন হিসাবনিকাশ শেষ করে আটটার...   \n",
+       "77153  স্থায়ী ঠিকানায় জায়গাজমি না [MASK] জটিলতাগুলো ক...   \n",
+       "74888  আশ্রয়শিবিরের সবকিছু দেখভাল করে দুর্যোগ ব্যবস্থ...   \n",
+       "68280                             আমার যতটুকু [MASK] পড়ে   \n",
+       "\n",
+       "                     error_word  \n",
+       "87101  চগযরোৎপদঙ্‌ক্তন্দ্বদ্ভ্র  \n",
+       "86466                      বন্ধ  \n",
+       "77153                      তকথো  \n",
+       "74888         পোনঘ্নদআব্রর্টঙঃও  \n",
+       "68280                   স্ট্রআে  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_custom_error_dataset.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6f2bed6c-fcc6-4961-99d7-640515e39f71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_custom_error_dataset.to_csv('custom_error_dataset.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82eaf2b2-f1b3-48ee-b60d-91bcae29076c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
